--- a/LunchTime_iOS/Storyboards/Xibs/EventDateAttendanceTableViewCell.xib
+++ b/LunchTime_iOS/Storyboards/Xibs/EventDateAttendanceTableViewCell.xib
@@ -5,22 +5,21 @@
     </device>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="dateCell" rowHeight="69" id="KGk-i7-Jjw" customClass="EventDateAttendanceTableViewCell" customModule="LunchTime_iOS" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="387" height="69"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="dateCell" rowHeight="82" id="KGk-i7-Jjw" customClass="EventDateAttendanceTableViewCell" customModule="LunchTime_iOS" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="426" height="82"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="387" height="68.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="426" height="81.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qtn-6m-obI">
-                        <rect key="frame" x="307" y="19.5" width="70" height="30"/>
+                        <rect key="frame" x="346" y="26" width="70" height="30"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="30" id="Otc-eT-AKC"/>
@@ -34,7 +33,7 @@
                         </connections>
                     </button>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tuesday Dec 11, 8PM" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xvr-uP-cwd">
-                        <rect key="frame" x="30" y="19.5" width="187" height="30"/>
+                        <rect key="frame" x="15" y="26" width="241" height="30"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="30" id="4ZY-Nn-Kne"/>
                         </constraints>
@@ -43,7 +42,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bI4-hc-UUS">
-                        <rect key="frame" x="232" y="19" width="70" height="30"/>
+                        <rect key="frame" x="271" y="26" width="70" height="30"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="30" id="1jL-j4-6SZ"/>
@@ -64,7 +63,7 @@
                     <constraint firstItem="qtn-6m-obI" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="cs7-Db-08V"/>
                     <constraint firstItem="bI4-hc-UUS" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="dZA-kc-XqB"/>
                     <constraint firstAttribute="trailing" secondItem="qtn-6m-obI" secondAttribute="trailing" constant="10" id="ehP-cx-627"/>
-                    <constraint firstItem="xvr-uP-cwd" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="10" id="mYy-mv-vh7"/>
+                    <constraint firstItem="xvr-uP-cwd" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="mfj-CJ-8Rv"/>
                     <constraint firstItem="bI4-hc-UUS" firstAttribute="leading" secondItem="xvr-uP-cwd" secondAttribute="trailing" constant="15" id="qvy-lo-VCy"/>
                 </constraints>
             </tableViewCellContentView>
@@ -74,7 +73,7 @@
                 <outlet property="noButton" destination="qtn-6m-obI" id="R7X-tR-6Og"/>
                 <outlet property="yesButton" destination="bI4-hc-UUS" id="ObF-eG-ecF"/>
             </connections>
-            <point key="canvasLocation" x="58.5" y="64.5"/>
+            <point key="canvasLocation" x="78" y="71"/>
         </tableViewCell>
     </objects>
 </document>
