--- a/LunchTime_iOS/Storyboards/Xibs/FriendAttendanceTableViewCell.xib
+++ b/LunchTime_iOS/Storyboards/Xibs/FriendAttendanceTableViewCell.xib
@@ -5,7 +5,6 @@
     </device>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -20,7 +19,7 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="randomemail@gmail.com" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SJG-yF-qTi">
-                        <rect key="frame" x="90" y="36.5" width="240" height="25"/>
+                        <rect key="frame" x="75" y="36.5" width="275" height="25"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="25" id="ShQ-rb-izj"/>
                         </constraints>
@@ -28,36 +27,38 @@
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Dvc-B7-amW">
-                        <rect key="frame" x="25" y="24" width="50" height="50"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="50" id="GZJ-Pj-qZm"/>
-                            <constraint firstAttribute="height" constant="50" id="sph-6A-EDT"/>
-                        </constraints>
-                    </imageView>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4CM-DL-A6J">
-                        <rect key="frame" x="345" y="34" width="70" height="30"/>
+                        <rect key="frame" x="365" y="34" width="70" height="30"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="70" id="nWI-ju-mhc"/>
                             <constraint firstAttribute="height" constant="30" id="nie-jU-JmU"/>
                         </constraints>
                         <state key="normal" title="Yes"/>
                     </button>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="v0O-yc-WUt">
+                        <rect key="frame" x="10" y="24" width="50" height="50"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="50" id="976-dJ-mPn"/>
+                            <constraint firstAttribute="height" constant="50" id="Cq8-86-QHh"/>
+                        </constraints>
+                    </view>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="Dvc-B7-amW" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="5" id="0ko-QF-XD1"/>
                     <constraint firstItem="4CM-DL-A6J" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="A07-G3-KJc"/>
-                    <constraint firstItem="SJG-yF-qTi" firstAttribute="leading" secondItem="Dvc-B7-amW" secondAttribute="trailing" constant="15" id="H6h-tS-lRb"/>
+                    <constraint firstItem="v0O-yc-WUt" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="A9Y-aP-y4f"/>
                     <constraint firstItem="4CM-DL-A6J" firstAttribute="leading" secondItem="SJG-yF-qTi" secondAttribute="trailing" constant="15" id="LRQ-Vc-7sW"/>
+                    <constraint firstItem="SJG-yF-qTi" firstAttribute="leading" secondItem="v0O-yc-WUt" secondAttribute="trailing" constant="15" id="Qrd-ox-0zb"/>
                     <constraint firstItem="SJG-yF-qTi" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="Su4-DE-Rlv"/>
-                    <constraint firstItem="Dvc-B7-amW" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="g5g-HC-a9M"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="4CM-DL-A6J" secondAttribute="trailing" constant="10" id="nof-vf-GAh"/>
+                    <constraint firstAttribute="trailing" secondItem="4CM-DL-A6J" secondAttribute="trailing" constant="10" id="ZcJ-3d-4iL"/>
+                    <constraint firstItem="v0O-yc-WUt" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="ipx-dR-PXd"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="attendanceStatusLabel" destination="4CM-DL-A6J" id="AW6-1z-YA6"/>
                 <outlet property="emailLabel" destination="SJG-yF-qTi" id="0jg-ww-hpE"/>
+                <outlet property="profileImageView" destination="v0O-yc-WUt" id="svd-Qw-Tr4"/>
             </connections>
             <point key="canvasLocation" x="60.5" y="98.5"/>
         </tableViewCell>
