--- a/LunchTime_iOS/Storyboards/HomeScreen.storyboard
+++ b/LunchTime_iOS/Storyboards/HomeScreen.storyboard
@@ -36,28 +36,14 @@
                                     <constraint firstAttribute="height" constant="120" id="aLh-MB-hiJ"/>
                                 </constraints>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lIx-oc-q5W">
-                                <rect key="frame" x="311" y="20" width="48" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="48" id="1ua-jr-ghh"/>
-                                    <constraint firstAttribute="height" constant="30" id="Nnb-bh-kfm"/>
-                                </constraints>
-                                <state key="normal" title="Logout"/>
-                                <connections>
-                                    <action selector="logoutButtonPressed:" destination="Jls-va-tKD" eventType="touchUpInside" id="KYB-sf-sUs"/>
-                                    <segue destination="Jls-va-tKD" kind="unwind" unwindAction="logoutButtonPressedWithUnwindSegue:" id="2du-Ez-HvM"/>
-                                </connections>
-                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="vP4-oq-0ER" firstAttribute="centerX" secondItem="Lc2-os-0Hx" secondAttribute="centerX" id="2tz-DT-aFQ"/>
                             <constraint firstItem="0uC-CT-CHt" firstAttribute="top" secondItem="bpm-qo-mwf" secondAttribute="top" constant="150" id="9vv-QG-bpU"/>
-                            <constraint firstItem="lIx-oc-q5W" firstAttribute="top" secondItem="bpm-qo-mwf" secondAttribute="top" id="C2c-My-R7M"/>
                             <constraint firstItem="s9C-It-XxG" firstAttribute="centerX" secondItem="Lc2-os-0Hx" secondAttribute="centerX" id="MIX-wu-x2G"/>
                             <constraint firstItem="0uC-CT-CHt" firstAttribute="centerX" secondItem="Lc2-os-0Hx" secondAttribute="centerX" id="Qor-8i-XKD"/>
                             <constraint firstItem="vP4-oq-0ER" firstAttribute="top" secondItem="s9C-It-XxG" secondAttribute="bottom" constant="2" id="dpt-8j-pLS"/>
-                            <constraint firstItem="bpm-qo-mwf" firstAttribute="trailing" secondItem="lIx-oc-q5W" secondAttribute="trailing" constant="16" id="pxr-bt-0b2"/>
                             <constraint firstItem="s9C-It-XxG" firstAttribute="top" secondItem="0uC-CT-CHt" secondAttribute="bottom" constant="2" id="zo9-9x-gPi"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="bpm-qo-mwf"/>
@@ -67,39 +53,27 @@
                     </tabBarItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="BUC-6h-OJM" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <exit id="Jls-va-tKD" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="-3521" y="630"/>
         </scene>
         <!--Profile-->
         <scene sceneID="eVF-9q-9su">
             <objects>
-                <viewController id="ulf-YC-Z72" sceneMemberID="viewController">
+                <viewController id="ulf-YC-Z72" customClass="ProfileViewController" customModule="LunchTime_iOS" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="P8N-SW-cb1">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="My Profile" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="clR-mp-9JZ">
-                                <rect key="frame" x="149" y="323" width="77" height="21"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="77" id="V50-9w-iJN"/>
-                                    <constraint firstAttribute="height" constant="21" id="dWs-HZ-rul"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="clR-mp-9JZ" firstAttribute="centerY" secondItem="P8N-SW-cb1" secondAttribute="centerY" id="4lr-K7-rTL"/>
-                            <constraint firstItem="clR-mp-9JZ" firstAttribute="centerX" secondItem="P8N-SW-cb1" secondAttribute="centerX" id="tvL-jq-w1W"/>
-                        </constraints>
                         <viewLayoutGuide key="safeArea" id="8um-fE-TtV"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Profile" image="profile" id="E2d-fD-grb"/>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <connections>
+                        <segue destination="HRg-qF-JZd" kind="unwind" identifier="logout" unwindAction="logoutButtonPressedWithUnwindSegue:" id="Xky-20-IJd"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Dja-EG-drV" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="HRg-qF-JZd" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="-62" y="648"/>
         </scene>
@@ -134,22 +108,20 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="bar" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="QEa-Tm-jCv">
-                                <rect key="frame" x="0.0" y="76" width="375" height="31"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="ynt-7G-O0k"/>
-                                </constraints>
+                            <segmentedControl opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="bar" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="QEa-Tm-jCv">
+                                <rect key="frame" x="0.0" y="76" width="375" height="29"/>
                                 <segments>
                                     <segment title="Friends"/>
                                     <segment title="Pending"/>
                                     <segment title="Search"/>
                                 </segments>
+                                <color key="tintColor" red="0.87058823529411766" green="0.47058823529411764" blue="0.14901960784313725" alpha="1" colorSpace="calibratedRGB"/>
                                 <connections>
                                     <action selector="segmentedControlSelected:" destination="WuP-aj-lLR" eventType="valueChanged" id="e0R-ra-7e2"/>
                                 </connections>
                             </segmentedControl>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="n2U-q0-sRa">
-                                <rect key="frame" x="0.0" y="106" width="375" height="512"/>
+                                <rect key="frame" x="0.0" y="104" width="375" height="514"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </tableView>
                             <searchBar contentMode="redraw" searchBarStyle="minimal" translatesAutoresizingMaskIntoConstraints="NO" id="JHC-7j-aNz">
