--- a/LunchTime_iOS/Storyboards/Xibs/ProfileTableViewCell.xib
+++ b/LunchTime_iOS/Storyboards/Xibs/ProfileTableViewCell.xib
@@ -1,21 +1,57 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="ProfileTableViewCell" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="profileCell" rowHeight="84" id="KGk-i7-Jjw" customClass="ProfileTableViewCell" customModule="LunchTime_iOS" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="421" height="84"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                <rect key="frame" x="0.0" y="0.0" width="421" height="83.5"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="First Name:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KbC-dl-X0d">
+                        <rect key="frame" x="15" y="26.5" width="120" height="30"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="30" id="29d-Hc-aB8"/>
+                            <constraint firstAttribute="width" constant="120" id="x5o-KD-ymM"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="George" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="09x-Oa-crU">
+                        <rect key="frame" x="150" y="26.5" width="256" height="30"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="30" id="EYj-7L-gYF"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                </subviews>
+                <constraints>
+                    <constraint firstItem="09x-Oa-crU" firstAttribute="leading" secondItem="KbC-dl-X0d" secondAttribute="trailing" constant="15" id="2g7-Ch-FiC"/>
+                    <constraint firstItem="KbC-dl-X0d" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="Fd1-Ib-Vxu"/>
+                    <constraint firstItem="09x-Oa-crU" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="a7J-Md-jZ6"/>
+                    <constraint firstItem="KbC-dl-X0d" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="fp6-Ep-xlN"/>
+                    <constraint firstAttribute="trailing" secondItem="09x-Oa-crU" secondAttribute="trailing" constant="15" id="oUb-R5-YLR"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <connections>
+                <outlet property="attributeLabel" destination="KbC-dl-X0d" id="VRF-7t-RgN"/>
+                <outlet property="valueForAttributeLabel" destination="09x-Oa-crU" id="F1Z-tA-8MY"/>
+            </connections>
+            <point key="canvasLocation" x="75.5" y="72"/>
         </tableViewCell>
     </objects>
 </document>
