Change: Added popup after event creation, various minor UI updates, TableView UI

--- a/LunchTime_iOS/Storyboards/Xibs/YelpLocationTableViewCell.xib
+++ b/LunchTime_iOS/Storyboards/Xibs/YelpLocationTableViewCell.xib
@@ -57,6 +57,9 @@
                                 </connections>
                             </button>
                         </subviews>
+                        <constraints>
+                            <constraint firstItem="dM6-j9-Th8" firstAttribute="width" secondItem="jRs-gf-2D9" secondAttribute="width" id="qAg-Kt-hS8"/>
+                        </constraints>
                     </stackView>
                 </subviews>
                 <constraints>
